Group no changed

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 						success: function(response){
 							obj = JSON.parse(response);
 							// console.log(obj.images[0].image);
-							// console.log(response);
+							console.log(response);
 
 							// Print data to screeen
 							$('#loadScreen').hide();
